# annicli

./: .gitignore  README.md  pyproject.toml
annicli/: app.py
tests/: test_annicli.py
